change font, add some spacing fixes

--- a/style.css
+++ b/style.css
@@ -5,18 +5,16 @@ body {
 iframe {
     display: block;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 .info {
     height: 100vh;
     width: 100%;
     display: table;
-    box-sizing: border-box;
 }
 .info-center {
     display: table-cell;
     vertical-align: middle;
-    width: 100%;
     text-align: center;
     padding: 0 10px;
 }
@@ -24,12 +22,11 @@ iframe {
     max-width: 100%;
 }
 .email {
-    color: #111;
-    font-family: "helvetica neue";
-    font-weight: 100;
+    color: #444;
+    font-family: "Lucida Console", Monaco, monospace;
     letter-spacing: 1px;
     line-height: 40px;
-    font-size: 26px;
+    font-size: 20px;
 }
 @media screen and (max-width: 340px) {
     .email {
